--- a/FoodOrder_API/appsettings.json
+++ b/FoodOrder_API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultSQLConnection": "Server=(localdb)\\Local;Database=FoodOrder;Integrated Security=True; MultipleActiveResultSets=True"
+  }
 }
